--- a/README
+++ b/README
@@ -1,13 +1,12 @@
 ALGORITHMS
 
 Coded up and tested some of advanced Algorithms and Data structures in C++. The implementation makes extensive use of Standard Template Library.
-Google Testing framework is used for automated testing of these algorithms.
+Google Testing framework is used for automating tests for these algorithms.
 
-TO BUILD USING CMAKE
+BUILD USING CMAKE
 
-To build the test cases for various implementations, follow the commands in the 
-source directory
- 
+To build the test cases for various implementations, follow the commands in the source directory.
+
  mkdir mybuild
  cd mybuild
  cmake ..
